<resources>
    <string name="app_name">Ka Kot Jingrwai01</string>
    <string name="welcome">WELCOME</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_trydashboard">trydashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="load">Load</string>
    <string name="todo">TODO</string>
    <string name="_1">1</string>
    <string name="add_hymn_lyric">add Hymn Lyric</string>
    <string name="lyric">Lyric</string>
    <string name="add_hymn_title">add Hymn Title</string>
    <string name="title">Title</string>
    <string name="add_hymn_id">add Hymn Id</string>
    <string name="id">Id</string>
    <string name="add_hymn">Add Hymn</string>
    <string name="add_hymn_Author" />
    <string name="Author" />
    <string name="author">Author</string>
    <string name="add_hymn_author">add_hymn_Author</string>

</resources>